--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,18 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+img{
+    vertical-align: middle;
+}
+
+.header img{
+    width: 48px;
+}
+
+.header a {
+    text-decoration: none;
+    color: black;
+    font-size: 25px;
+    font-weight: bold;
+}
