--- a/src/components/Tweet.css
+++ b/src/components/Tweet.css
@@ -1,39 +1,41 @@
-.displayName{
-    font-weight: bold;
-}
-.userName{
-    color: rgba(0, 0, 0, 0.481);
-}
-.date{
-    color: rgba(0, 0, 0, 0.481);
-}
 .tweet{
     display: flex;
+    border-bottom: 0.5px solid grey;
+    padding: 20px 0px 20px 0px;
+
 }
-.pfp{
+
+.tweet .displayName{
+    font-weight: bold;
+}
+.tweet .userName{
+    color: rgba(0, 0, 0, 0.481);
+}
+.tweet .date{
+    color: rgba(0, 0, 0, 0.481);
+}
+
+.tweet .pfp{
     padding: 10px;
 }
-.pfp img {
+.tweet .pfp img {
     border-radius: 50%;
     width: 50px;
     height: 50px;
 }
-.footer{
+.tweet .footer{
     display: flex;
 }
-.footer div{
+.tweet .footer div{
     padding: 10px;
     width: 70px;
 }
-svg{
+.tweet svg{
     width: 20px;
     height: 20px;
     vertical-align: middle;
 }
-.tweet{
-    border: 0.5px solid grey;
-    padding: 20px 0px 20px 0px;
-}
-.date, .userName{
+
+.tweet .date, .userName{
     margin-left: 6px;
 }
